Agregados sitemap.xlm, robots.txt y verificción Google

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.png" type="image/png" sizes="32x32">
   <link rel="apple-touch-icon" href="favicon.png">
+  <meta name="google-site-verification" content="ISGF_2ibZsNj10f7mfNgxsbpomhxgpv54z79v2kTvEg" />
 </head>
 <body>
 
