--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
   <link rel="icon" href="favicon.png" type="image/png" sizes="32x32">
   <link rel="apple-touch-icon" href="favicon.png">
   <meta name="google-site-verification" content="ISGF_2ibZsNj10f7mfNgxsbpomhxgpv54z79v2kTvEg" />
+
+   <!-- SEO Meta Tags -->
+  <meta name="description" content="Club del Sol 🌞 | Una comunidad donde con un aporte simbólico puedes participar en juntas, sorteos y decisiones colectivas. ¡Únete con solo S/1 y sé parte del crecimiento en red!">
+  <meta name="keywords" content="Club del Sol, comunidad, aportes, juntas, Perú, oportunidades, crecimiento, red solidaria">
+  <meta name="author" content="Club del Sol">
+
+  <!-- Open Graph (Facebook, WhatsApp) -->
+  <meta property="og:title" content="Club del Sol 🌞 | Únete con S/1">
+  <meta property="og:description" content="Una comunidad solidaria, juntas, sorteos y beneficios compartidos. El sol brilla para todos ☀️">
+  <meta property="og:image" content="https://clubdelsol.netlify.app/favicon.png">
+  <meta property="og:url" content="https://clubdelsol.netlify.app/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Club del Sol 🌞 | Únete con S/1">
+  <meta name="twitter:description" content="Una comunidad solidaria, juntas, sorteos y beneficios compartidos. El sol brilla para todos ☀️">
+  <meta name="twitter:image" content="https://clubdelsol.netlify.app/favicon.png">
 </head>
 <body>
 
